<resources>

    <string name="app_name">Random Alarm</string>
    <string name="select_base_time">Select the time:</string>
    <string name="button_set_alarm">Set Alarm</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Pick a time</string>
    <string name="hour_picker">Hour</string>
    <string name="minute_picker">Minutes</string>
    <string name="title_activity_display_message">Display Message Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_variance">Enter variance</string>
    <string name="variance_default">0</string>
    <string name="repeat">Repeat</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tueday">Tuesday</string>
    <string name="wedday">Wednesday</string>
    <string name="thuday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="satday">Saturday</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

</resources>