<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/chkSun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunday" />
 
    <CheckBox
        android:id="@+id/chkMon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/monday" />
    
    <CheckBox
        android:id="@+id/chkTue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tueday" />
    
    <CheckBox
        android:id="@+id/chkWed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wedday" />
    
    <CheckBox
        android:id="@+id/chkThu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thuday" />
 
    <CheckBox
        android:id="@+id/chkFri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friday" />
    
    <CheckBox
        android:id="@+id/chkSat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/satday" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >
 
	    <Button android:id="@+id/but_cancel"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/cancel"  
	          />
	
	    <Button
	        android:id="@+id/but_submit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@+id/but_cancel"
	        android:text="@string/submit" />
    
    </RelativeLayout>
    
</LinearLayout>