<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:stretchColumns="*"
    	android:background="#000000">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" 
            android:background="@layout/table_row_border" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hour_picker"
                tools:context=".SetAlarmActivity" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minute_picker"
                tools:context=".SetAlarmActivity" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="@layout/table_row_border" >

            <NumberPicker
                android:id="@+id/hourPicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:context=".SetAlarmActivity" />

            <NumberPicker
                android:id="@+id/minutePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:context=".SetAlarmActivity" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="@layout/table_row_border" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/enter_variance"
                tools:context=".SetAlarmActivity" />
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                tools:context=".SetAlarmActivity" />

            <EditText
                android:id="@+id/variance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/variance_default"
                android:inputType="number"
                android:width="0dp" >
	                <requestFocus />
            </EditText>
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                tools:context=".SetAlarmActivity" />

        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:background="@layout/table_row_border" >
            
	         <Button
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:onClick="showSelectWeekdays"
	            android:text="@string/repeat"
	            android:gravity="center"
	            style="?android:attr/borderlessButtonStyle"
	            tools:context=".SetAlarmActivity" />
	            
        </TableRow>    
    </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:onClick="setAlarm"
        android:text="@string/button_set_alarm" />

</RelativeLayout>
